# cachesim

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  oracle.rs  simulator.rs  trace.rs
